# Youtube-automation

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/dashboard/: next.config.mjs  package.json  tailwind.config.ts
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/components/: Sidebar.tsx  (+1 more)
apps/worker/: Dockerfile  pyproject.toml
apps/worker/app/: __init__.py  config.py  costs.py  db.py  demo_phase1.py  demo_phase2.py  demo_phase3.py  demo_phase4.py  demo_phase5.py  events.py  main.py  make_short.py  make_video.py  state_machine.py  youtube_auth.py
apps/worker/app/agents/: __init__.py  context.py  editorial_planner.py  pipeline.py  qa.py  research_compiler.py  scoring.py  script_writer.py  topic_scorer.py  trend_scout.py
apps/worker/app/agents/prompts/: __init__.py  editorial_planner_v1.md  qa_v1.md  research_compiler_v1.md  script_writer_v1.md  topic_scorer_v1.md  trend_scout_v1.md
apps/worker/app/intelligence/: __init__.py  autonomy.py  gate_router.py  learning.py  shorts.py  strategist.py
apps/worker/app/production/: __init__.py  broll.py  cards.py  media.py  pipeline.py  render_worker.py  scriptparse.py  thumbnail_designer.py  visual_director.py  voice_producer.py
apps/worker/app/providers/: __init__.py  embeddings.py  llm.py  research.py
apps/worker/app/publishing/: __init__.py  analytics.py  publisher.py  quota.py  seo.py
apps/worker/app/services/: __init__.py  research_poll.py
apps/worker/tests/: test_autonomy.py  test_config.py  test_costs.py  test_embeddings.py  test_health.py  test_integration_phase1.py  test_llm.py  test_research.py  test_scoring.py  test_scriptparse.py  test_seo.py  test_state_machine.py
docs/: architecture.md  decisions.md  runbook.md  voice-guide.md
infra/: docker-compose.yml
infra/backup/: pg_dump.sh
n8n/: README.md  WF10_shorts_derivation.json  WF1_research_sweep.json  WF2_score_and_plan.json  WF3_production_line.json  WF4_gate_router.json  WF5_publish.json  WF6_analytics_ingest.json  WF7_weekly_strategy.json  WF8_health_costs.json  import.sh
scripts/: db-verify.sh  demo-phase-0.sh
(+17 files in other folders)
