[project]
name = "phonewala-worker"
version = "0.0.0"
description = "PhoneWala Gyan worker: FastAPI internal API + job consumers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
# Heavy ML stack for the real embedding backend (BGE-M3). Not needed for tests/dev.
embeddings = [
    "sentence-transformers>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.uv]
package = false
