[project]
name = "phonewala-worker"
version = "0.0.0"
description = "PhoneWala Gyan worker: FastAPI internal API + job consumers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
# Heavy ML stack for the real embedding backend (BGE-M3). Not needed for tests/dev.
embeddings = [
    "sentence-transformers>=3.3.0",
]
# Free-tier LLM provider (STACK_TIER=free). Lazy-imported; not needed for tests/dev.
gemini = [
    "google-genai>=1.0.0",
]
# Phase 3 production (free): Edge TTS voice + Pillow scene cards/thumbnails.
# Needs ffmpeg + a Devanagari font on the host/image (the worker image installs both).
media = [
    "edge-tts>=7.0.0",
    "pillow>=11.0.0",
]
# Phase 4 publish + analytics: YouTube Data + Analytics APIs + OAuth.
youtube = [
    "google-api-python-client>=2.140.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.uv]
package = false
